--- a/sandbox/denko/index.html
+++ b/sandbox/denko/index.html
@@ -5,184 +5,184 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>電工試験データ暗記クイズ</title>
     <style>
-        body {
-            font-family: 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-            color: #333;
-        }
-        h1, h2 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .container {
-            background-color: white;
-            border-radius: 8px;
-            padding: 20px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
-        }
-        .quiz-area {
-            margin-bottom: 30px;
-        }
-        .question {
-            font-size: 1.2em;
-            font-weight: bold;
-            margin-bottom: 15px;
-            padding: 10px;
-            background-color: #f0f7ff;
-            border-radius: 5px;
-            border-left: 5px solid #4a90e2;
-        }
-        .options {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-        .option {
-            padding: 10px 15px;
-            background-color: #f1f1f1;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        .option:hover {
-            background-color: #e9e9e9;
-        }
-        .option.selected {
-            background-color: #d4e6f9;
-            border-color: #4a90e2;
-        }
-        .controls {
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            margin-top: 20px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: #4a90e2;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.2s;
-        }
-        button:hover {
-            background-color: #3a7bc8;
-        }
-        button:disabled {
-            background-color: #cccccc;
-            cursor: not-allowed;
-        }
-        .result {
-            padding: 10px 15px;
-            margin: 15px 0;
-            border-radius: 5px;
-            font-weight: bold;
-            display: none;
-        }
-        .correct {
-            background-color: #d4edda;
-            color: #155724;
-            border: 1px solid #c3e6cb;
-        }
-        .incorrect {
-            background-color: #f8d7da;
-            color: #721c24;
-            border: 1px solid #f5c6cb;
-        }
-        .stats {
-            display: flex;
-            justify-content: space-around;
-            background-color: #4a90e2;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-        }
-        .stat-item {
-            text-align: center;
-        }
-        .tab-container {
-            margin-bottom: 20px;
-        }
-        .tab-buttons {
-            display: flex;
-            gap: 5px;
-            margin-bottom: 10px;
-        }
-        .tab-button {
-            padding: 10px 15px;
-            background-color: #e9e9e9;
-            border: 1px solid #ddd;
-            border-radius: 5px 5px 0 0;
-            cursor: pointer;
-        }
-        .tab-button.active {
-            background-color: #4a90e2;
-            color: white;
-            border-color: #4a90e2;
-        }
-        .tab-content {
-            display: none;
-        }
-        .tab-content.active {
-            display: block;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        tr:nth-child(even) {
-            background-color: #f9f9f9;
-        }
-        .settings {
-            margin-bottom: 20px;
-        }
-        .settings label {
-            display: block;
-            margin-bottom: 10px;
-        }
-        .settings select {
-            padding: 8px;
-            margin-left: 10px;
-            border-radius: 4px;
-            border: 1px solid #ddd;
-        }
-        .progress-bar-container {
-            height: 20px;
-            background-color: #e9e9e9;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            overflow: hidden;
-        }
-        .progress-bar {
-            height: 100%;
-            background-color: #4a90e2;
-            border-radius: 10px;
-            width: 0%;
-            transition: width 0.3s ease;
-        }
+     body {
+         font-family: 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+         line-height: 1.6;
+         max-width: 800px;
+         margin: 0 auto;
+         padding: 20px;
+         background-color: #f5f5f5;
+         color: #333;
+     }
+     h1, h2 {
+         text-align: center;
+         margin-bottom: 20px;
+     }
+     .container {
+         background-color: white;
+         border-radius: 8px;
+         padding: 20px;
+         box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+         margin-bottom: 20px;
+     }
+     .quiz-area {
+         margin-bottom: 30px;
+     }
+     .question {
+         font-size: 1.2em;
+         font-weight: bold;
+         margin-bottom: 15px;
+         padding: 10px;
+         background-color: #f0f7ff;
+         border-radius: 5px;
+         border-left: 5px solid #4a90e2;
+     }
+     .options {
+         display: grid;
+         grid-template-columns: 1fr 1fr;
+         gap: 10px;
+         margin-bottom: 20px;
+     }
+     .option {
+         padding: 10px 15px;
+         background-color: #f1f1f1;
+         border: 1px solid #ddd;
+         border-radius: 5px;
+         cursor: pointer;
+         transition: background-color 0.2s;
+     }
+     .option:hover {
+         background-color: #e9e9e9;
+     }
+     .option.selected {
+         background-color: #d4e6f9;
+         border-color: #4a90e2;
+     }
+     .controls {
+         display: flex;
+         justify-content: center;
+         gap: 10px;
+         margin-top: 20px;
+     }
+     button {
+         padding: 10px 20px;
+         background-color: #4a90e2;
+         color: white;
+         border: none;
+         border-radius: 5px;
+         cursor: pointer;
+         font-size: 1em;
+         transition: background-color 0.2s;
+     }
+     button:hover {
+         background-color: #3a7bc8;
+     }
+     button:disabled {
+         background-color: #cccccc;
+         cursor: not-allowed;
+     }
+     .result {
+         padding: 10px 15px;
+         margin: 15px 0;
+         border-radius: 5px;
+         font-weight: bold;
+         display: none;
+     }
+     .correct {
+         background-color: #d4edda;
+         color: #155724;
+         border: 1px solid #c3e6cb;
+     }
+     .incorrect {
+         background-color: #f8d7da;
+         color: #721c24;
+         border: 1px solid #f5c6cb;
+     }
+     .stats {
+         display: flex;
+         justify-content: space-around;
+         background-color: #4a90e2;
+         color: white;
+         padding: 10px;
+         border-radius: 5px;
+         margin-bottom: 20px;
+     }
+     .stat-item {
+         text-align: center;
+     }
+     .tab-container {
+         margin-bottom: 20px;
+     }
+     .tab-buttons {
+         display: flex;
+         gap: 5px;
+         margin-bottom: 10px;
+     }
+     .tab-button {
+         padding: 10px 15px;
+         background-color: #e9e9e9;
+         border: 1px solid #ddd;
+         border-radius: 5px 5px 0 0;
+         cursor: pointer;
+     }
+     .tab-button.active {
+         background-color: #4a90e2;
+         color: white;
+         border-color: #4a90e2;
+     }
+     .tab-content {
+         display: none;
+     }
+     .tab-content.active {
+         display: block;
+     }
+     table {
+         width: 100%;
+         border-collapse: collapse;
+         margin: 20px 0;
+     }
+     th, td {
+         border: 1px solid #ddd;
+         padding: 10px;
+         text-align: center;
+     }
+     th {
+         background-color: #f2f2f2;
+     }
+     tr:nth-child(even) {
+         background-color: #f9f9f9;
+     }
+     .settings {
+         margin-bottom: 20px;
+     }
+     .settings label {
+         display: block;
+         margin-bottom: 10px;
+     }
+     .settings select {
+         padding: 8px;
+         margin-left: 10px;
+         border-radius: 4px;
+         border: 1px solid #ddd;
+     }
+     .progress-bar-container {
+         height: 20px;
+         background-color: #e9e9e9;
+         border-radius: 10px;
+         margin-bottom: 20px;
+         overflow: hidden;
+     }
+     .progress-bar {
+         height: 100%;
+         background-color: #4a90e2;
+         border-radius: 10px;
+         width: 0%;
+         transition: width 0.3s ease;
+     }
     </style>
 </head>
 <body>
-    <h1>電工試験データ暗記クイズ</h1>
+    <!-- <h1>電工試験データ暗記クイズ</h1>  -->
 
     <div class="tab-container">
         <div class="tab-buttons">
@@ -601,8 +601,8 @@
          // 不正解の選択肢を生成
          if (question.type === 'wire-size') {
              // 許容電流の場合の不正解選択肢
-             const otherCurrents = ['17A', '27A', '35A', '37A', '48A', '49A', '60A', '61A', '68A'];
-             for (let i = 0; i < 3; i++) {
+             const otherCurrents = ['17A', '27A', '35A', '37A', '48A', '49A', '60A', '61A'];
+             for (let i = 0; i < 5; i++) {
                  let randomCurrent;
                  do {
                      randomCurrent = otherCurrents[Math.floor(Math.random() * otherCurrents.length)];
