--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <div class="patents">
     <h2>Patents</h2>
     <ul>
-        <li>Y. Kakiuchi and <u>T. Kamatani</u>, <a href="https://patents.google.com/patent/JP7628266B2">"Data Analysis System and Classification Processing Method"</a>, Japanese Patent No. JP7628266B2, 2025.</li>
+        <li>Y. Kakiuchi and <u>T. Kamatani</u>, <a href="https://patents.google.com/patent/JP7628266B2">"Data Analysis System and Classification Processing Method,"</a> Japanese Patent No. JP7628266B2, 2025.</li>
     </ul>
 </div>
 
