--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -13,10 +13,13 @@
         <h2>Sandbox</h2>
         <ul>
             <li>
-                <a href="denko/index.html">電工試験</a>
+                <a href="pg/math.html">ぺんこのさんすう</a>
             </li>
             <li>
-                <a href="pg/math.html">ぺんこのさんすう</a>
+                <a href="arabic/arabic_ligature_trainer.html">Arabic Ligature Trainer</a>
+            </li>
+            <li>
+                <a href="denko/index.html">電工試験</a>
             </li>
         </ul>
     </body>
