--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -16,6 +16,9 @@
                 <a href="pg/math.html">ぺんこのさんすう</a>
             </li>
             <li>
+                <a href="tuner/index.html">Violin Tune Generator</a>
+            </li>
+            <li>
                 <a href="arabic/arabic_ligature_trainer.html">Arabic Ligature Trainer</a>
             </li>
             <li>
